massive cleanup start